swipe to refresh fruit reccycler

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,7 @@
     <string name="fruitPrice">Fruit price</string>
     <string name="dialogMessage">Do yo really want to delete this item</string>
     <string name="dialogTitle">Delete an item</string>
+
+    <string name="open">Open Drawer</string>
+    <string name="close">Close Drawer</string>
 </resources>
